--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ Makefile eol=lf
 *.sh eol=lf
 configure eol=lf
 *.mdk eol=lf
+kremlin_ref eol=lf
 
 /src/tools/* eol=lf
 /src/tests/interactive/* eol=lf
