--- a/src/ocaml-output/Makefile
+++ b/src/ocaml-output/Makefile
@@ -29,7 +29,7 @@ DOS2UNIX=$(shell which dos2unix >/dev/null 2>&1 && echo dos2unix || echo true)
 # Detect the GNU utilities
 INSTALL_EXEC := $(shell ginstall --version 2>/dev/null | cut -c -8 | head -n 1)
 DATE_EXEC := $(shell gdate --version 2>/dev/null | cut -c -4 | head -n 1)
-FIND := $(shell which gfind >/dev/null 2>&1 && echo gfind || echo find)
+FIND=$(shell which gfind >/dev/null 2>&1 && echo gfind || echo find)
 ifdef INSTALL_EXEC
    INSTALL_EXEC := ginstall
 else
