Revert "trying out ulib in the two phase type checker ***NO_CI***"
This reverts commit 92ecb42baf822c4eb4f1562f9721ba79d34a8a29.

--- a/ulib/Makefile.verify
+++ b/ulib/Makefile.verify
@@ -16,7 +16,7 @@ extra: $(addsuffix -ver, $(EXTRA))
 indent: $(addsuffix -indent, $(ALL))
 
 %-ver: %
-	$(FSTAR) --debug $(basename $^) --debug_level 2-Phase-Checking $^
+	$(FSTAR) $^
 	touch $@
 
 %.fst-in:
