Added test case for recurring bug in extraction

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -21,7 +21,8 @@ struct \
 micro-benchmarks \
 bytes \
 tactics \
-kv_parsing
+kv_parsing \
+extraction
 
 # low-level \  ... NS: removing from CI for this branch
 
