--- a/src/ocaml-output/SConscript
+++ b/src/ocaml-output/SConscript
@@ -17,7 +17,7 @@ if sys.platform == 'win32' or sys.platform == 'cygwin':  # Windows 32-bit or 64-
   if menhir == None:
     menhir = env.WhereIs('menhir.exe', env['ENV']['PATH']) # try with .exe
     if menhir == None:
-      print 'Failed to find menhir on path ' + env['ENV']['PATH']
+      print ('Failed to find menhir on path ' + env['ENV']['PATH'])
       menhir_tool = None
     else:
       menhir_tool = menhir
@@ -32,6 +32,7 @@ else:
 menhir_min_version=20161115
 if menhir_tool:
   output = subprocess.check_output([menhir_tool, '--version'])
+  output = str(output) # on python3, check_output returns bytes, not a string
   srch = re.search(r'.*version ([0-9]*)', output)
   version = int(srch.group(1))
   if version < menhir_min_version:
@@ -60,7 +61,7 @@ env['OCAMLLEX']='ocamllex'
 env['OCAMLBUILD']='ocamlbuild'
 env['OCAMLBUILDARGS']='$FSTAR_OCAMLBUILD_EXTRAS -I src/ocaml-output -I src/basic/ml ' \
                       '-I src/parser/ml -I src/fstar/ml -I src/extraction/ml ' \
-                      '-I src/prettyprint/ml -I src/tactics/ml -I ulib/ml -I ulib/ml/compiler ' \
+                      '-I src/prettyprint/ml -I src/tactics/ml -I ulib/ml ' \
                       '-j 24 -build-dir src/ocaml-output/_build -use-ocamlfind'
 
 parse_mly=env.Command('parse.mly', '../parser/parse.mly',
@@ -80,7 +81,7 @@ def generate_fstar_parser_parse_ml(target, source, env):
   parse_mli= 'ocaml-output/parse.mli'
   try:
     fd = open(parse_ml, 'r')
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't read source file %s" % parse_ml)
   sourcefile = fd.read()
   fd.close()
@@ -93,7 +94,7 @@ def generate_fstar_parser_parse_ml(target, source, env):
   # write the target file
   try:
     fd = open(target[0].get_path(), "w")
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't write target file %s" % target[0])
 
   fd.write('open Prims\n')
@@ -120,7 +121,7 @@ def generate_fstar_version_ml(target, source, env):
   # read the source file into memory
   try:
     fd = open(source[0].get_path(), 'r')
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't read source file %s" % source[0])
   sourcefile = fd.read().split('\r\n')
   fd.close()
@@ -138,10 +139,10 @@ def generate_fstar_version_ml(target, source, env):
   else:
     PLATFORM=os.uname()[4]  # machine is at index 4
 
-  COMPILER = 'OCaml ' + subprocess.check_output(['ocamlc', '-version']).split('\r\n')[0]
+  COMPILER = 'OCaml ' + str(subprocess.check_output(['ocamlc', '-version'])).split('\r\n')[0]
 
   # implement tools/get_commit directly
-  COMMIT = subprocess.check_output(['git', 'log','--pretty=format:%h','-n','1'])
+  COMMIT = str(subprocess.check_output(['git', 'log','--pretty=format:%h','-n','1']))
   try:
     subprocess.check_output(['git', 'diff','--exit-code','HEAD'], stderr=subprocess.STDOUT)
   except subprocess.CalledProcessError as e:
@@ -150,7 +151,7 @@ def generate_fstar_version_ml(target, source, env):
 
   try:
     fd = open(target[0].get_path(), "w")
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't write target file %s" % target[0])
 
   fd.write('open FStar_Util\n')
@@ -165,9 +166,9 @@ def generate_fstar_version_ml(target, source, env):
 fstar_version_ml=env.Command('FStar_Version.ml', '../../version.txt', generate_fstar_version_ml)
 
 readpipe, writepipe = os.pipe()
-os.write(writepipe, 'print_endline Sys.ocaml_version')
+os.write(writepipe, str.encode('print_endline Sys.ocaml_version'))
 os.close(writepipe)
-OCAML_VERSION = subprocess.check_output(['ocaml','get_branch.ml'], stdin=readpipe).split('\r\n')[0]
+OCAML_VERSION = str(subprocess.check_output(['ocaml','get_branch.ml'], stdin=readpipe)).split('\r\n')[0]
 os.close(readpipe)
 env.Command('../extraction/ml/FStar_Extraction_ML_PrintML.ml',
             '../extraction/ml/FStar_Extraction_ML_PrintML_'+OCAML_VERSION+'.ml',
@@ -178,7 +179,7 @@ def generate_parse_fsy(target, source, env):
   # read the source file into memory
   try:
     fd = open(source[0].get_path(), 'r')
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't read source file %s" % source[0])
   sourcelines = fd.read().split('\n')
   fd.close()
@@ -220,7 +221,7 @@ def generate_parse_fsy(target, source, env):
   # write the target file
   try:
     fd = open(target[0].get_path(), "wb")
-  except (OSError,IOError), e:
+  except:
     raise SCons.Errors.UserError("Can't write target file %s" % target[0])
   for l in targetlines:
     sl = l.split('\n')
