tactics: add test for alien unembedding

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -20,6 +20,7 @@ all:	Apply.uver		\
 	Logic.uver		\
 	Trace.uver		\
 	Nest.uver		\
+	Aliens.uver		\
 	TestBV.uver		\
 	Map.uver		\
 	Map.OpaqueToSMT.uver	\
